--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,7 +12,7 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome Gallery</h1>
     </section>
-    <ul class="gallery"></ul>
+    <ul class="gallery container"></ul>
 
     <script type="module" defer src="./js/1-gallery.js"></script>
   </body>
